--- a/WebManager/WebManager.csproj
+++ b/WebManager/WebManager.csproj
@@ -168,8 +168,10 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountModels.cs" />
     <Compile Include="Models\Answer.cs" />
+    <Compile Include="Models\AppDbContext.cs" />
     <Compile Include="Models\NavigationRoute.cs" />
     <Compile Include="Models\NavigationTrack.cs" />
     <Compile Include="Models\Question.cs" />
@@ -237,6 +239,7 @@
     <Content Include="Content\themes\base\minified\jquery.ui.theme.min.css" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
+    <Content Include="Content\fonts\young.ttf" />
     <None Include="Scripts\jquery-1.7.1.intellisense.js" />
     <Content Include="Scripts\jquery-1.7.1.js" />
     <Content Include="Scripts\jquery-1.7.1.min.js" />
