--- a/OpenDagBackEnd/OpenDagBackEnd/Web.config
+++ b/OpenDagBackEnd/OpenDagBackEnd/Web.config
@@ -131,6 +131,7 @@
           <add type="DotNetOpenAuth.OpenId.RelyingParty.Behaviors.AXFetchAsSregTransform, DotNetOpenAuth.OpenId.RelyingParty" />
         </behaviors>
       </relyingParty>
+      <provider></provider>
     </openid>
   </dotNetOpenAuth>
   <uri>
