--- a/OpenDagBackEnd/OpenDagBackEnd/Web.config
+++ b/OpenDagBackEnd/OpenDagBackEnd/Web.config
@@ -13,6 +13,7 @@
       <section name="openid" type="DotNetOpenAuth.Configuration.OpenIdElement, DotNetOpenAuth.OpenId" requirePermission="false" allowLocation="true" />
       <section name="oauth" type="DotNetOpenAuth.Configuration.OAuthElement, DotNetOpenAuth.OAuth" requirePermission="false" allowLocation="true" />
     </sectionGroup>
+    <section name="glimpse" type="Glimpse.Core.Configuration.GlimpseConfiguration" />
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-OpenDagBackEnd-20130108212911;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-OpenDagBackEnd-20130108212911.mdf" providerName="System.Data.SqlClient" />
@@ -41,9 +42,15 @@
         <add namespace="System.Web.WebPages" />
       </namespaces>
     </pages>
+    <trace writeToDiagnosticsTrace="true" enabled="true" pageOutput="false" />
+    <httpModules>
+      <add name="Glimpse" type="Glimpse.Core.Module" />
+    </httpModules>
+    <httpHandlers>
+      <add path="glimpse.axd" verb="GET,POST" type="Glimpse.Core.Handler" />
+    </httpHandlers>
   </system.web>
   <system.webServer>
-    <validation validateIntegratedModeConfiguration="false" />
     <handlers>
       <remove name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" />
       <remove name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" />
@@ -51,7 +58,12 @@
       <add name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness32" responseBufferLimit="0" />
       <add name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework64\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness64" responseBufferLimit="0" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+      <add name="Glimpse" path="glimpse.axd" verb="GET,POST" type="Glimpse.Core.Handler,Glimpse.Core" preCondition="integratedMode" />
     </handlers>
+    <validation validateIntegratedModeConfiguration="false" />
+    <modules>
+      <add name="Glimpse" type="Glimpse.Core.Module,Glimpse.Core" preCondition="integratedMode" />
+    </modules>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -141,4 +153,5 @@
     <idn enabled="All" />
     <iriParsing enabled="true" />
   </uri>
+  <glimpse enabled="true" />
 </configuration>
