--- a/OpenDagBackEnd/OpenDagBackEnd/packages.config
+++ b/OpenDagBackEnd/OpenDagBackEnd/packages.config
@@ -25,6 +25,8 @@
   <package id="DotNetOpenAuth.OpenIdInfoCard.UI" version="4.1.4.12333" targetFramework="net45" />
   <package id="DotNetOpenAuth.OpenIdOAuth" version="4.1.4.12333" targetFramework="net45" />
   <package id="EntityFramework" version="5.0.0" targetFramework="net45" />
+  <package id="Glimpse" version="0.87" targetFramework="net45" />
+  <package id="Glimpse.Mvc3" version="0.87" targetFramework="net45" />
   <package id="jQuery" version="1.7.1.1" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.8.20.1" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.9.0.1" targetFramework="net45" />
