--- a/OpenDagBackEnd/API/API.csproj
+++ b/OpenDagBackEnd/API/API.csproj
@@ -90,12 +90,11 @@
     <Reference Include="DotNetOpenAuth.OpenIdOAuth">
       <HintPath>..\Packages missing\DotNetOpenAuth.OpenIdOAuth.dll</HintPath>
     </Reference>
-    <Reference Include="Glimpse.Core, Version=0.87.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Glimpse.0.87\lib\net40\Glimpse.Core.dll</HintPath>
+    <Reference Include="Glimpse.Core">
+      <HintPath>D:\Tijdelijk\GitHub\20-1\AppOpenDag_BackEnd\OpenDagBackEnd\OpenDagBackEnd\bin\Glimpse.Core.dll</HintPath>
     </Reference>
     <Reference Include="Glimpse.Mvc3">
-      <HintPath>..\packages\Glimpse.Mvc3.0.87\lib\net40\Glimpse.Mvc3.dll</HintPath>
+      <HintPath>D:\Tijdelijk\GitHub\20-1\AppOpenDag_BackEnd\OpenDagBackEnd\OpenDagBackEnd\bin\Glimpse.Mvc3.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Newtonsoft.Json">
